--- a/src/public/index.html
+++ b/src/public/index.html
@@ -21,11 +21,11 @@
 		<meta name="x5-page-mode" content="app">
 		<meta name="msapplication-tap-highlight" content="no">
 		
-		<link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+		<!--<link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
 		<link rel="manifest" href="./favicon/manifest.json">
-		<link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">-->
 		<meta name="apple-mobile-web-app-title" content="Dokodm">
 		<meta name="application-name" content="Dokodm">
 		<meta name="theme-color" content="#ffffff">
@@ -37,6 +37,5 @@
 		<div id="app">
 			<router-view></router-view>
 		</div>
-		<script src='app.bundle.js'></script>
 	</body>
 </html>
